fix jump content by internal link in fixed header

--- a/app/styles/base/_typography.scss
+++ b/app/styles/base/_typography.scss
@@ -2,6 +2,7 @@ html {
   font-size: 62.5%;
   box-sizing: border-box;
   scroll-behavior: smooth;
+  scroll-padding-top: 6rem;
 }
 
 .text {
