--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -2,7 +2,8 @@ html {
   font-size: 62.5%;
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
-  scroll-behavior: smooth; }
+  scroll-behavior: smooth;
+  scroll-padding-top: 6rem; }
 
 .text {
   font-family: "Roboto", sans-serif;
